# lib/api-spec/openapi.yaml
@@ -324,6 +324,12 @@ components:
         googleSheetId:
           type: string
           nullable: true
+        googleSheetEmail:
+          type: string
+          nullable: true
+        googleSheetUrl:
+          type: string
+          nullable: true
         createdAt:
           type: string
         updatedAt:
@@ -365,6 +371,9 @@ components:
         pickupLocation:
           type: string
           nullable: true
+        googleSheetEmail:
+          type: string
+          nullable: true
       required:
         - title
 
@@ -393,6 +402,9 @@ components:
           type: string
           nullable: true
         pickupLocation:
+          type: string
+          nullable: true
+        googleSheetEmail:
           type: string
           nullable: true
 
